# fastlet

./: pyproject.toml  requirements.txt
fastlet/auth/: __init__.py  authentication.py  authorization.py  other.py
fastlet/auth/utils/: __init__.py  cookie.py  docs.py  password.py  token.py
fastlet/cli/: Dockerfile  run.py
fastlet/cli/files/: Dockerfile  ci.yml  notes.txt  pytest.ini  requirements-base.txt  requirements-dev.txt
fastlet/models/: __init__.py  auth.py  notif.py  payloads.py
fastlet/queries/: auth.py  redis.py
fastlet/testing/: auth.py  db.py  queries.py
fastlet/utils/: client.py  db.py  log.py  mail.py  notif.py  plugins.py  settings.py
